token veryfy and auth route
