# src/routes/auth/index.js
@@ -1,14 +1,17 @@
 const router = require("express").Router();
 const signinValidator = require("../../../validator/auth/signinValidator");
 const signupValidator = require("../../../validator/auth/signupvalidator");
+const { authUser } = require("../../api/v1/authentation/auth");
 
 const {
   signupGetController,
   signupPostController,
   signinGetController,
   signinPostController,
-  logoutPostController,
+  getTokenController,
+  logoutController,
 } = require("../../api/v1/authentation/controllers");
+const { isAuthenticatedUser } = require("../../middleware/authMieeleware");
 
 // const { isUnAuthenteacetUser } = require("../../middleware/authMieeleware");
 
@@ -20,12 +23,14 @@ router.post(
   signupPostController
 );
 router.get("/signin", signinGetController);
+router.get("/token", getTokenController);
 router.post(
   "/signin",
 
   signinValidator,
   signinPostController
 );
-router.post("/logout", logoutPostController);
+// router.post("/authUser", authUser);
+router.get("/logout", logoutController);
 
 module.exports = router;
